tests/golden/type_errors/array_flat_map_non_array.cd
flatMap(1, fun (value) { return [value]; });
