tests/golden/type_errors/array_flat_map_non_array.err
Type error at 1:43: flatMap expects array as first argument, got number
  flatMap(1, fun (value) { return [value]; });
                                            ^
